--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -2,49 +2,53 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Form page</title>
+    <meta charset="UTF-8">
+    <title>Form page</title>
 </head>
 <body>
 <h1>Add new tour</h1>
 
-<form action="#" th:action="@{/processForm}" th:object="${tour}" method="post">
-  <div>
-    <label>Name</label>
-    <input type="text" th:field="*{name}">
-  </div>
+<form action="#" method="post" th:action="@{/processForm}" th:object="${tour}">
+    <div>
+        <div style="color:red" th:errors="*{name}" th:if="${#fields.hasErrors('name')}"></div>
+        <label>Name</label>
+        <input th:field="*{name}" type="text">
+    </div>
 
-  <div>
-    <label>Code</label>
-    <input type="text" th:field="*{code}">
-  </div>
+    <div>
+        <div style="color:red" th:errors="*{code}" th:if="${#fields.hasErrors('code')}"></div>
+        <label>Code</label>
+        <input th:field="*{code}" type="text">
+    </div>
 
-  <div>
-    <label>Continent</label>
-    <select name="continent">
-      <option th:each="continent : ${T(com.josip.travelagency.model.Tour.Continent).values()}"
-              th:value="${continent}" th:text="${continent}"></option>
-    </select>
-  </div>
+    <div>
+        <label>Continent</label>
+        <select name="continent">
+            <option th:each="continent : ${T(com.josip.travelagency.model.Tour.Continent).values()}"
+                    th:text="${continent}" th:value="${continent}"></option>
+        </select>
+    </div>
 
-  <div>
-    <label>Start date</label>
-    <input type="date" th:field="*{date}">
-  </div>
+    <div>
+        <div style="color:red" th:errors="*{date}" th:if="${#fields.hasErrors('date')}"></div>
+        <label>Start date</label>
+        <input th:field="*{date}" type="date">
+    </div>
 
-  <div>
-    <label>Tour duration</label>
-    <input type="number" th:field="*{duration}">
-  </div>
+    <div>
+        <div style="color:red" th:errors="*{duration}" th:if="${#fields.hasErrors('duration')}"></div>
+        <label>Tour duration</label>
+        <input th:field="*{duration}" type="number">
+    </div>
 
-  <div>
-    <label>All Inclusive</label>
-    <input type="checkbox" th:field="*{allInclusive}">
-  </div>
+    <div>
+        <label>All Inclusive</label>
+        <input th:field="*{allInclusive}" type="checkbox">
+    </div>
 
-  <div>
-    <input type="submit" value="Submit">
-  </div>
+    <div>
+        <input type="submit" value="Submit">
+    </div>
 </form>
 
 </body>
