--- a/src/main/resources/templates/tour-details.html
+++ b/src/main/resources/templates/tour-details.html
@@ -25,6 +25,20 @@
         <textarea rows="20" class="form-control" th:field="${tour.tourDetails.description}" readonly="readonly"  ></textarea>
     </div>
 
+    <div class="row" th:if="${tour.comments.empty}">
+        <h2>There are no comments for this tour</h2>
+    </div>
+
+    <div class="row">
+        <div th:if="${!tour.comments.empty}">
+            <h2>Comment</h2>
+
+            <ul class="list-group" th:each="comment : ${tour.comments}">
+                <li class="list-group-item" th:text="${comment.content}"></li>
+            </ul>
+        </div>
+    </div>
+
     <div class="row">
         <a th:href="@{/showOffer}" class="btn btn-warning">Back</a>
     </div>
