--- a/src/main/resources/templates/tours.html
+++ b/src/main/resources/templates/tours.html
@@ -27,6 +27,7 @@
                 <th scope="col">Date</th>
                 <th scope="col">Duration</th>
                 <th scope="col">All Inclusive</th>
+                <th scope="col">Image</th>
                 <th sec:authorize="hasRole('EMPLOYEE')" scope="col">Edit</th>
                 <th sec:authorize="hasRole('EMPLOYEE')" scope="col">Edit details</th>
                 <th sec:authorize="hasRole('ADMIN')" scope="col">Remove</th>
@@ -43,6 +44,7 @@
                 <td th:text="${#dates.format(tour.date, 'yyyy-MM-dd')}"></td>
                 <td th:text="${tour.duration}"></td>
                 <td th:text="${tour.allInclusive} ? 'yes' : 'no'"></td>
+                <td sec:authorize="hasRole('EMPLOYEE')"><a class="btn btn-primary">Images</a></td>
                 <td sec:authorize="hasRole('EMPLOYEE')"><a class="btn btn-primary" th:href="@{/editTour/} + ${tour.id}">Edit</a></td>
                 <td sec:authorize="hasRole('EMPLOYEE')"><a class="btn btn-primary" th:href="@{/editTourDetails/} + ${tour.id}">Edit details</a></td>
                 <td sec:authorize="hasRole('ADMIN')"><a class="btn btn-danger" th:href="@{/deleteTour/} + ${tour.id}">Delete</a></td>
