CRUD image files

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,9 +14,9 @@
 <div class="container">
     <h1>Welcome to our travel agency</h1>
 
-    <a sec:authorize="hasRole('EMPLOYEE')" th:href="@{/addTour}" class="btn btn-primary">Add a new tour</a>
+    <a th:href="@{/addTour}" class="btn btn-primary">Add a new tour</a>
     <a th:href="@{/showOffer}" class="btn btn-primary">Show our offer</a>
-    <a sec:authorize="hasRole('CLIENT')" th:href="@{/addComment}" class="btn btn-primary">Add comment</a>
+    <a th:href="@{/addComment}" class="btn btn-primary">Add comment</a>
     <a sec:authorize="isAnonymous()" th:href="@{/login}" class="btn btn-secondary float-right">Login</a>
     <a sec:authorize="!isAnonymous()" th:href="@{/logout}" class="btn btn-secondary float-right">Logout</a>
 
