--- a/src/main/resources/templates/tours.html
+++ b/src/main/resources/templates/tours.html
@@ -44,12 +44,12 @@
                 <td th:text="${#dates.format(tour.date, 'yyyy-MM-dd')}"></td>
                 <td th:text="${tour.duration}"></td>
                 <td th:text="${tour.allInclusive} ? 'yes' : 'no'"></td>
-                <td sec:authorize="hasRole('EMPLOYEE')"><a class="btn btn-primary">Images</a></td>
-                <td sec:authorize="hasRole('EMPLOYEE')"><a class="btn btn-primary" th:href="@{/editTour/} + ${tour.id}">Edit</a></td>
-                <td sec:authorize="hasRole('EMPLOYEE')"><a class="btn btn-primary" th:href="@{/editTourDetails/} + ${tour.id}">Edit details</a></td>
-                <td sec:authorize="hasRole('ADMIN')"><a class="btn btn-danger" th:href="@{/deleteTour/} + ${tour.id}">Delete</a></td>
+                <td> <a class="btn btn-primary" th:href="@{/image-home}">Images</a></td>
+                <td><a class="btn btn-primary" th:href="@{/editTour/} + ${tour.id}">Edit</a></td>
+                <td><a class="btn btn-primary" th:href="@{/editTourDetails/} + ${tour.id}">Edit details</a></td>
+                <td><a class="btn btn-danger" th:href="@{/deleteTour/} + ${tour.id}">Delete</a></td>
                 <td><a class="btn btn-success" th:href="@{/showTourDetails/} + ${tour.id}">Details</a></td>
-                <td sec:authorize="hasRole('CLIENT')"><a class="btn btn-success" th:href="@{/addUserToTour/} + ${tour.id}">Sign in</a></td>
+                <td ><a class="btn btn-success" th:href="@{/addUserToTour/} + ${tour.id}">Sign in</a></td>
             </tr>
             </tbody>
         </table>
