--- a/src/main/resources/templates/image/images.html
+++ b/src/main/resources/templates/image/images.html
@@ -12,7 +12,7 @@
 <br>
 <h1 class="text-center">Image Gallery
     <a href="/image-home" class="btn btn-warning text-right">Back</a>
-    <a href="/"  class="btn btn-danger text-right">Home</a>
+    <a href="/" class="btn btn-danger text-right">Home</a>
 
 </h1>
 <br><br>
@@ -38,7 +38,10 @@
     </tr>
     </tbody>
 </table>
-
+    <h1 style="float: right" class="text-center">
+        <a href="/image-home" class="btn btn-warning text-right">Back</a>
+        <a href="/" class="btn btn-danger text-right">Home</a>
+    </h1>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
