Image entity: is part of Tour (1 tour have many images) fixed "orphan problem". Added select button (tour) to image-form

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,6 +17,7 @@
     <a th:href="@{/addTour}" class="btn btn-primary">Add a new tour</a>
     <a th:href="@{/showOffer}" class="btn btn-primary">Show our offer</a>
     <a th:href="@{/addComment}" class="btn btn-primary">Add comment</a>
+    <a th:href="@{/image-home}" class="btn btn-primary">Add Image to Tour</a>
     <a sec:authorize="isAnonymous()" th:href="@{/login}" class="btn btn-secondary float-right">Login</a>
     <a sec:authorize="!isAnonymous()" th:href="@{/logout}" class="btn btn-secondary float-right">Logout</a>
 
