--- a/src/main/resources/templates/image/imagedetails.html
+++ b/src/main/resources/templates/image/imagedetails.html
@@ -35,7 +35,16 @@
                 <div class="product-single-w3l">
                     Description: <span th:text="${description}" class="my-sm-4 my-3">
 						</span>
-                </div><br>
+                </div>
+                <div class="product-single-w3l">
+                    Tour name: <span th:text="${tour}" class="my-sm-4 my-3">
+						</span>
+                </div>
+                <div class="product-single-w3l">
+                    Tour id: <span th:text="${tourid}" class="my-sm-4 my-3">
+						</span>
+                </div>
+                <br>
                 <a href="/image/show">Go Back</a>
                 &emsp;<a href="/">Go Home</a>
             </div>
