--- a/src/main/resources/templates/image/image-form.html
+++ b/src/main/resources/templates/image/image-form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Image page</title>
     <meta charset="utf-8">
@@ -15,9 +16,21 @@
 <div class="contact py-sm-5 py-4">
     <div class="container py-xl-4 py-lg-2">
         <!-- form -->
-        <form id="form">
+        <form id="form"  >
             <div class="contact-grids1 w3agile-6">
                 <div class="row">
+
+                    <div class="form-group">
+                        <label>Tour</label>
+
+                        <select class="form-control"  placeholder="Tour Name" id="tour" name="tourid" required="required">
+                            <option th:each="tour : ${tours}"
+                                    th:value="${tour.id}"
+                                    th:text="${tour.name}">
+                            </option>
+                        </select>
+                    </div>
+
                     <div class="col-md-6 col-sm-6 contact-form1 form-group">
                         <label class="col-form-label">Name</label>
                         <input type="text" class="form-control" placeholder="Product Name" id="name" name="name" required="required">
@@ -52,7 +65,7 @@
     </div>
 </div>
 <p class="text-center">
-    <img src="/images/loader.gif" alt="loader" style="width: 150px;height: 120px;" id="loader">
+    <img src="/img/loader.gif" alt="loader" style="width: 150px;height: 120px;" id="loader">
 </p>
 <script src="/js/product.js"></script>
 </body>
