External API's OpenWeatherMap, MyIP, ipApi

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,6 +23,7 @@
 
     <br>
     <br>
+    <a th:href="@{/getWeather}" class="btn btn-warning">Get current weather</a>
 
     <h1>Hello <span sec:authorize="isAuthenticated()">
 								<span sec:authentication="name"></span>
